# PyCHEMA

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  References.txt  pyproject.toml
app/: streamlit_app.py
docs/: ANNOUNCEMENTS.md  DEVELOPER_NOTES.md  ZENODO_UPLOAD.md  chema_gap_analysis.md  heritage.md  related_work.md  rp1311_samples.md  validation.md
examples/: rp1311_example13.py  rp1311_example8.py  run_lox_lh2.py  run_rp1311_all.py  sweep_lox_rp1.py
results/: .gitkeep
src/rocketcae/: __init__.py  cea_runner.py  cli.py  design.py  models.py  optimize.py  ranking.py  rp1311_catalog.py  rp1311_smoke.py  sweeps.py  validation.py
tests/: test_core.py  test_nozzle_design.py  test_rp1311_example8.py  test_rp1311_samples.py
