[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketcae"
version = "0.1.0"
description = "Preliminary liquid rocket trade studies using NASA CEA (Python), with CLI and GUI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "Muhammed Ali Kul", email = "muhammeda.kul@gmail.com" },
]
keywords = ["rocket", "CEA", "propulsion", "optimization", "liquid-rocket"]
dependencies = [
  "cea>=3.2.0",
  "numpy>=2",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
gui = ["streamlit>=1.28"]
dev = ["pytest>=7.0", "streamlit>=1.28"]

[project.scripts]
rocketcae = "rocketcae.cli:main"

[project.urls]
Homepage = "https://github.com/Nikabanzai/RocketCAE"
Documentation = "https://nasa.github.io/cea/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
